# stginga

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.rst  CITATION  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  conftest.py  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci_workflows.yml  codeql-analysis.yml  cron_only_workflows.yml  open_actions.yml  predeps_workflow.yml  publish-to-pypi.yml
docs/: Makefile  conf.py  index.rst  make.bat  rtd-pip-requirements
docs/source/: conf.py  config.rst  index.rst  install.rst  ipynb.rst  plugins.rst  ref_api.rst  region.rst  run.rst
docs/source/api/: gingawrapper.rst  local_plugin_mixin.rst  nbinteract.rst  plugin_info.rst  utils.rst
docs/source/notebooks/: ginga_nbinteract.ipynb
docs/source/plugins_manual/: backgroundsub.rst  badpixcorr.rst  mipick.rst  mosaicauto.rst  multiimage.rst  saveimage.rst  smoothing.rst  snrcalc.rst  tvmark.rst  tvmask.rst
docs/stginga/: config.rst  install.rst  ipynb.rst  ref_api.rst  run.rst
docs/stginga/notebooks/: ginga_nbinteract.ipynb
docs/stginga/plugins_manual/: backgroundsub.rst  badpixcorr.rst  dqinspect.rst  index.rst  mipick.rst  mosaicauto.rst  multiimage.rst  smoothing.rst  snrcalc.rst  tvmark.rst  tvmask.rst
experimental/: README.rst  ginga_config.py
experimental/notebooks/: astrowidgets_asdf_in_fits.ipynb
experimental/plugins/: MIPick.py  MultiImage.py  Smoothing.py
ginga/data/: dqflags_jwst.txt
ginga/examples/configs/: general.cfg  ginga_config.py  plugin_Contents.cfg
ginga/qtw/plugins/: BackgroundSub.py  DQInspect.py  MultiImage.py
licenses/: README.rst
scripts/: runstginga  stginga
stginga/: __init__.py  _astropy_init.py  conftest.py  gingawrapper.py  io_asdf.py  nbinteract.py  plugin_info.py  region.py  utils.py
stginga/data/: dqflags_acs.txt  dqflags_hstgen.txt  dqflags_jwst.txt  dqflags_wfc3.txt
stginga/examples/configs/: channel_Image.cfg  general.cfg  ginga_config.py  plugin_BackgroundSub.cfg  plugin_BadPixCorr.cfg  plugin_ChangeHistory.cfg  plugin_Contents.cfg  plugin_DQInspect.cfg  plugin_Mosaic.cfg  plugin_SNRCalc.cfg  plugin_SaveImage.cfg  plugin_Smoothing.cfg  plugin_TVMark.cfg  plugin_TVMask.cfg  plugin_Thumbs.cfg
stginga/jupyterw/: widget.py
stginga/plugins/: BackgroundSub.py  BadPixCorr.py  ChangeHistory.py  DQInspect.py  MIPick.py  MosaicAuto.py  MultiImage.py  SNRCalc.py  SaveImage.py  Smoothing.py  TVMark.py  TVMask.py  local_plugin_mixin.py
stginga/qtw/plugins/: BackgroundSub.py
stginga/tests/: setup_package.py  test_utils.py
