[build_sphinx]
source-dir = docs/source
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[pycodestyle]
exclude = extern,sphinx

[metadata]
package_name = stginga
version = 0.3.dev
description = Ginga products specific to STScI data analysis
long_description = Ginga products specific to STScI data analysis
author = STScI
author_email = help@stsci.edu
license = BSD
url = https://github.com/spacetelescope/stginga
edit_on_github = False
github_project = spacetelescope/stginga
classifiers =
  Intended Audience :: Science/Research,
  License :: OSI Approved :: BSD License,
  Operating System :: OS Independent,
  Programming Language :: Python,
  Topic :: Scientific/Engineering :: Astronomy,
  Topic :: Software Development :: Libraries :: Python Modules

[entry_points]
stginga = stginga.gingawrapper:_main
